@@ -1,6 +1,7 @@
 14-Jul-2015 Laurent Duflot
 	* launch_jobs_on_grid.py: automatically recognize all supported
 	derivations from sample name
+	* ZeroLeptonCRZ.cxx : fix for two isolated leptons
 
 
 15-Jul-2015 Geraldine Conti
